[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/fase 2/Area2D.gd" type="Script" id=1]
[ext_resource path="res://sprites/fase_dos_fios-Sheet.png" type="Texture" id=2]
[ext_resource path="res://scenes/fase 2/fios level.gd" type="Script" id=3]
[ext_resource path="res://sprites/balinhaVTal.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 360, 640 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 360, 0, 360, 640 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1080, 0, 360, 640 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 720, 0, 360, 640 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "oneError",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "threeError",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ) ],
"loop": true,
"name": "twoError",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=4]

[sub_resource type="RectangleShape2D" id=5]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 13, 12 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 13, 14.5 )

[sub_resource type="RectangleShape2D" id=8]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 180, 320 )
frames = SubResource( 13 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 180, 320 )
texture = ExtResource( 2 )
hframes = 5

[node name="Red_line" type="Line2D" parent="."]
position = Vector2( 56, 341 )
scale = Vector2( 1, 1 )
points = PoolVector2Array( -9, -8, -10, -9 )
default_color = Color( 0.886275, 0.447059, 0.521569, 1 )

[node name="Green" type="Node2D" parent="."]
position = Vector2( 32, 183 )

[node name="Green_line" type="Line2D" parent="."]
position = Vector2( -23, -33 )
scale = Vector2( 1, 1 )
points = PoolVector2Array( 59, 119, 78, 120 )
default_color = Color( 0.380392, 0.647059, 0.247059, 1 )

[node name="Red_selection" type="Area2D" parent="."]
position = Vector2( 31, 47 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Red_selection"]
position = Vector2( 18, 285 )
shape = SubResource( 1 )

[node name="Blue_line" type="Line2D" parent="."]
position = Vector2( 32, 150 )
points = PoolVector2Array( 13, 21, 20, 23 )
default_color = Color( 0.270588, 0.447059, 0.890196, 1 )

[node name="Red_terminal" type="Area2D" parent="."]
position = Vector2( -1, -1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Red_terminal"]
position = Vector2( 311, 156 )
shape = SubResource( 2 )

[node name="Green_terminal" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Green_terminal"]
position = Vector2( 310, 221 )
shape = SubResource( 3 )

[node name="Green_selection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Green_selection"]
position = Vector2( 47, 88 )
shape = SubResource( 4 )

[node name="Blue_selection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blue_selection"]
position = Vector2( 47, 172 )
shape = SubResource( 5 )

[node name="Blue_terminal" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blue_terminal"]
position = Vector2( 310, 285 )
shape = SubResource( 6 )

[node name="Orange_selection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Orange_selection"]
position = Vector2( 45, 251 )
shape = SubResource( 7 )

[node name="Orange_terminal" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Orange_terminal"]
position = Vector2( 310, 91 )
shape = SubResource( 8 )

[node name="Orange_line" type="Line2D" parent="."]
position = Vector2( 42, 252 )
points = PoolVector2Array( 3, -1, 9, -4 )
default_color = Color( 0.945098, 0.392157, 0.121569, 1 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 310, 89 )
scale = Vector2( 0.121875, 0.132813 )
texture = ExtResource( 4 )

[connection signal="input_event" from="Red_selection" to="." method="_on_Red_selection_input_event"]
[connection signal="input_event" from="Red_terminal" to="." method="_on_Red_terminal_input_event"]
[connection signal="input_event" from="Green_terminal" to="." method="_on_Green_terminal_input_event"]
[connection signal="input_event" from="Green_selection" to="." method="_on_Green_selection_input_event"]
[connection signal="input_event" from="Blue_selection" to="." method="_on_Blue_selection_input_event"]
[connection signal="input_event" from="Blue_terminal" to="." method="_on_Blue_terminal_input_event"]
[connection signal="input_event" from="Orange_selection" to="." method="_on_Orange_selection_input_event"]
[connection signal="input_event" from="Orange_terminal" to="." method="_on_Orange_terminal_input_event"]
